<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#F01C1C1C">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/are_you_sure"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/white" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bigone"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textSize="13sp"
        android:textColor="#ECF4F0F0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/yes"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:background="@drawable/yes_button_back"
            android:layout_margin="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:layout_weight="1"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:background="#FFAA00"
            android:layout_margin="10dp"/>

    </LinearLayout>

</LinearLayout>