<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExerciseActivity"
    android:background="@drawable/blackgradientback">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="847dp"
        android:scaleType="centerCrop"
        android:src="@drawable/blackgradientback" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarExcercise"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:theme="@style/toolBarTheme"
            android:background="#1fFFFFFF"
            app:titleTextColor="#FFFFFF"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="5dp" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:gravity="center"
        android:text="@string/get_ready"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/default_text_size_buttons"
        android:textStyle="bold" />

    <FrameLayout
            android:id="@+id/fl_rest_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="0dp"
            android:layout_gravity="center"
            android:background="@drawable/ready_button_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarExcercise">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:max="10"
                android:progress="100"
                android:rotation="-90"
                android:background="@drawable/circular_progress_bar_gray"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:indeterminate="false"/>

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/item_circular_color_accent_background"/>
        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/_10"
            android:layout_gravity="center" />
        </FrameLayout>

        <TextView
            android:id="@+id/tvUpcomingLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_exercise"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:visibility="gone"
            android:textStyle="bold"
            tools:visibility="visible"
            android:gravity="center"
            android:layout_marginTop="500dp"/>

        <TextView
            android:id="@+id/tvUpcomingExerciseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_of_upcoming_exercise"
            android:textColor="#DDFFFFFF"
            android:textSize="16sp"
            android:visibility="gone"
            android:textStyle="bold"
            tools:visibility="visible"
            android:gravity="center"
            android:layout_marginTop="525dp"/>


    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/lunges"
        android:layout_marginTop="100dp"
        android:background="@drawable/excersise_image_boundary"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/tvExcerciseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_name"
        android:textColor="@color/white"
        android:textSize="33sp"
        android:visibility="gone"
        android:textStyle="bold"
        tools:visibility="visible"
        android:gravity="center"
        android:layout_marginTop="450dp"/>

    <FrameLayout
        android:id="@+id/flExcersiseView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:background="@drawable/ready_button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarExcercise">

        <ProgressBar
            android:id="@+id/progressBarExcersice"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:max="60"
            android:progress="600"
            android:rotation="-90"
            android:background="@drawable/circular_progress_bar_gray"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:indeterminate="false"/>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/item_circular_color_accent_background"/>
        <TextView
            android:id="@+id/tvTimerExcercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="29sp"
            android:text="@string/_60"
            android:layout_gravity="center"/>
    </FrameLayout>
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvExerciseStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="790dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:elevation="2dp" />

</RelativeLayout>